# DiffuRWKV

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
train/: train.py
train/data_prep/: build_tulu3_binidx.sh  convert_tulu3_to_jsonl.py
train/src/: dataset.py  model.py
